--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-native-image-overlay",
-  "version": "0.1.2",
-  "description": "Add overlays on top of ImageBackground",
+  "name": "react-native-image-overlay-prop-types-fixed",
+  "version": "0.1.3",
+  "description": "Add overlays on top of ImageBackground proptypes commented out due to bug with react-native 0.69.6",
   "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gaddafirusli/react-native-image-overlay.git"
+    "url": "git+https://github.com/timbabs1/react-native-image-overlay.git"
   },
   "keywords": [
     "image",
